--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html><html dir="ltr" lang="ru" xml:lang="ru" class="yui3-js-enabled"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>TEST1 Otvety</title>
-    <link rel="shortcut icon" href="<img src="https://img.icons8.com/wired/64/000000/anonymous-mask.png"/>">
+    <link rel="shortcut icon" href="<img src="https://img.icons8.com/wired/64/000000/anonymous-mask.png/>">
     
 <meta name="keywords" content="moodle, TEST1 Otvety">
 <link rel="stylesheet" type="text/css" href="https://edu.spbftu.ru/theme/yui_combo.php?rollup/3.17.2/yui-moodlesimple-min.css"><link rel="stylesheet" type="text/css" href="https://edu.spbftu.ru/theme/styles.php/boost/1623958444_1/all">
