--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:title" content="Хуета по Шилкиной, ответы на ебанные вопросы">
+<meta property="og:site_name" content="СТАРостаЛеха.тк">
+<meta property="og:url" content="https://starostalexa.tk/">
+<meta property="og:description" content="Хуета по Шилкиной, ответы на ебучие вопросы">
+<meta property="og:image" content="/vitya.png">
+<meta property="og:image:width" content="968"/>
+<meta property="og:image:height" content="504"/>
+    
+    
 </head>
 <body id="page-mod-quiz-review" class="format-topics  path-mod path-mod-quiz chrome dir-ltr lang-ru yui-skin-sam yui3-skin-sam edu-spbftu-ru pagelayout-incourse course-2764 context-124551 cmid-43746 category-2  jsenabled">
 <div class="toast-wrapper mx-auto py-0 fixed-top" role="status" aria-live="polite"></div>
