--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                         <nav aria-label="Панель навигации">
     <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="/test2.html">Личный кабинет</a>
+                    <a href="test2.html">Личный кабинет</a>
                 </li>
         
                 <li class="breadcrumb-item">Мои курсы</li>
