--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="action-menu-trigger">
                     <div class="dropdown">
                         
-                            <span class="userbutton"><span class="usertext mr-1">Бурхониддин Зухриддин угли Насриддинов</span><span class="avatars"><span class="avatar current"><img src="/f2.png" class="userpicture" width="35" height="35" alt=""></span></span></span>
+                            <span class="userbutton"><span class="usertext mr-1">Бурхониддин Зухриддин угли Насриддинов</span><span class="avatars"><span class="avatar current"><img src="https://edu.spbftu.ru/pluginfile.php/14311/user/icon/boost/f2?rev=5259000" class="userpicture" width="35" height="35" alt=""></span></span></span>
                                 
                             <b class="caret"></b>
                         </a>
