--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 <div class="d-flex flex-wrap">
                     <div id="page-navbar">
                         <nav aria-label="Панель навигации">
-    <ol class="breadcrumb">
+                <ol class="breadcrumb">
                 <li>
                     Ответы на: &nbsp;
                 </li>
@@ -457,9 +457,21 @@
                 <li class="breadcrumb-item">
                     <a href="/test4.html" title="Перейти к четвертому тесту">4ий тест</a>
                 </li>
+</ol>
+</nav>
+                    </div>
+                    <div class="ml-auto d-flex">
+                        
+                    </div>
+                    <div id="course-header">
+                        
+                    </div>
+                </div>
 
-                <br>
-
+                <div class="d-flex flex-wrap">
+                    <div id="page-navbar">
+                        <nav aria-label="Панель навигации">
+    <ol class="breadcrumb">
 
                 <li>
                     Ссылка в мудл к(о): &nbsp;
