--- a/test3.html
+++ b/test3.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html><html dir="ltr" lang="ru" xml:lang="ru" class="yui3-js-enabled"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>TEST1 Otvety</title>
+    <title>Тест3 Ответы</title>
     <link rel=”icon” href=”/favicon.ico” type=”image/x-icon”>.
     
 <meta name="keywords" content="moodle, TEST1 Otvety">
