--- a/sample1.html
+++ b/sample1.html
@@ -9,7 +9,7 @@
   <h2><a href="https://starostalexa.tk/">Тест1</a>, <a href="https://starostalexa.tk/test2.html">Тест2</a>, <a href="https://starostalexa.tk/test3.html">Тест3</a>, <a href="https://starostalexa.tk/test4.html">Тест4</a></h2>
   <!-- Комментарий -->
   <h1>Работы по SimInTech</h1>
-  <h2>ССЫЛКИ</h2>
+  <h2>Ссылки</h2>
   <p>Первый абзац.</p>
   <p>Второй абзац.</p>
  </body>
