--- a/AKM.html
+++ b/AKM.html
@@ -3,7 +3,8 @@
  <head>
   <title>АКМ</title>
  </head>
- <body> 
+ <body style=background-color:#d0e0f0;>
+
 
 <br><H1> Указать задачи использования материалов ДЗЗ при национальной инвентаризации лесов в мире</H1>
 <H2><input type="checkbox" name="option1" checked> замена части наземных наблюдений и измерений
