--- a/s.html
+++ b/s.html
@@ -3,7 +3,11 @@
  <head>
   <title>СисАнал</title>
  </head>
- <body style=background-color:#d0e0f0;>
+
+<body style=background-color:#d0e0f0;>
+
+<font face='Helvetica'>
+        <div class='htmlVersion'></div>
 
 
 <H1>Системный анализ предназначен для </H1>
@@ -413,6 +417,10 @@ a(p) – относительная скорость роста биомассы
 
 <H1>Система критериев и индикаторов устойчивого управления лесами включает в себя </H1>
 <H2><input type="checkbox" checked>6
+
+
+</font>
+    <div class='cssVersion'></div>
 
 
  </body>
