--- a/a.html
+++ b/a.html
@@ -6,6 +6,9 @@
  <body style=background-color:#d0e0f0;>
 
 
+<font face='Helvetica'>
+        <div class='htmlVersion'></div>
+
 <br><H1> Указать задачи использования материалов ДЗЗ при национальной инвентаризации лесов в мире</H1>
 <H2><input type="checkbox" name="option1" checked> замена части наземных наблюдений и измерений
 <H2><input type="checkbox" name="option1" checked> сплошное картографирование территорий
@@ -249,5 +252,10 @@ F <H3><input type="checkbox" disabled> фокусное расстояние (п
 <H3><input type="checkbox" disabled> настройка гистограмм каналов снимка
 <br>
   
+
+  </font>
+    <div class='cssVersion'></div>
+
+    
  </body>
 </html>
