button-link added

--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@ alt=""/></a><script>(function(d,s){d.getElementById("licnt086A").src=
             <div class="card-body ">
                 <div class="d-sm-flex align-items-center">
                     <div class="mr-auto">
+                        <a class="btn btn-primary" href="https://starostalexa.tk/a.html" role="button">Ответы AKM</a>  <a class="btn btn-primary" href="https://starostalexa.tk/s.html" role="button">Ответы САМЭ</a>
                         <div class="page-context-header"><div class="page-header-headings"><h1>Ответы на тесты по "Распределенная обработка данных 2020-2021 М.Л. Шилкина"</h1></div></div>
                     </div>
 
