--- a/s.html
+++ b/s.html
@@ -10,6 +10,8 @@
         <div class='htmlVersion'></div>
 
 
+<a class="btn btn-primary" href="https://starostalexa.tk/a.html" role="button">AKM</a>  <a class="btn btn-primary" href="https://starostalexa.tk" role="button">Main</a>
+
 <br><H1>Системный анализ предназначен для </H1>
 <H3><input type="checkbox" checked>объективного изучения природных объектов и процессов
 <H3><input type="checkbox" checked>улучшения качества управления
