--- a/a.html
+++ b/a.html
@@ -9,6 +9,10 @@
 <font face='Helvetica'>
         <div class='htmlVersion'></div>
 
+
+<a class="btn btn-primary" href="https://starostalexa.tk" role="button">Main</a>  <a class="btn btn-primary" href="https://starostalexa.tk/s.html" role="button">САМЭ</a>
+
+
 <br><H1> Указать задачи использования материалов ДЗЗ при национальной инвентаризации лесов в мире</H1>
 <H2><input type="checkbox" name="option1" checked> замена части наземных наблюдений и измерений
 <H2><input type="checkbox" name="option1" checked> сплошное картографирование территорий
